<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="create_task_title">Create Task</string>
    <string name="create">Create</string>
    <string name="update_task_title">Update Task</string>
    <string name="update">Update</string>
    <string name="category_delete_title">Important</string>
    <string name="category_delete_description">By deleting a category you will delete all tasks with this category, are  you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_category_title">No category found!</string>
    <string name="empty_category_description">Please create new one</string>
    <string name="example_task_creation">Task Name: e.g: Study Android</string>
    <string name="category_all">All</string>
    <string name="create_category">Create Category</string>
    <string name="create_category_example">Category Name: e.g: Work</string>
</resources>