<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_info_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/category_delete_title" />

    <TextView
        android:id="@+id/tv_info_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/category_delete_description" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_info_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/wine"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_info_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/wine"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>