<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_category" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_category_example"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_category_create"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/wine"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>