<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task_title" />

    <Spinner
        android:id="@+id/spinner_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_task_creation"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_task_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/wine"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_task_create_or_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/wine"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/create" />

    </LinearLayout>

</LinearLayout>